########################################################################
# Build files for kp-pop/ch1.
#
# Author: Nicholas Kachur <nick.e.kachur@gmail.com>
########################################################################

add_executable( ex1-6 ex1-6.c )
add_test( ex1-6 ${CMAKE_CURRENT_BINARY_DIR}/ex1-6 )
